--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ et-xmlfile==1.1.0
 Flask==2.0.0
 Flask-Compress==1.9.0
 future==0.18.2
+gunicorn==20.1.0
 itsdangerous==2.0.0
 Jinja2==3.0.0
 MarkupSafe==2.0.0
